--- a/.github/workflows/terraform-cicd.yaml
+++ b/.github/workflows/terraform-cicd.yaml
@@ -11,11 +11,28 @@ permissions:
   contents: read
 
 jobs:
-  tflint-checks: # TFLint tool for linter
+  terraform-infra:
+    name: 'Terraform-infra'
+    runs-on: ubuntu-latest
+    environment: dev
+    # needs: checkov-checks
+    # if: ${{ needs.checkov-checks.outputs.checkov-passed == 'true' }}
 
-  tfsec-checks: # tfsec for security vulnerabilities
+    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+    defaults:
+      run:
+        shell: bash
 
-  checkov-checks: # static analysis tool
+    steps:
+      # Checkout the repository to the GitHub Actions runner
+      - name: Checkout
+        uses: actions/checkout@v3
 
-  terraform-infra: # workflow to provison the structure
-  # Assuming this is already defined.
+
+      # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
+      # reference - https://github.com/hashicorp/setup-terraform
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          cli_config_credentials_token: ${{ secrets.TERROFORM_TOKEN }}
+
