--- a/.github/workflows/terraform-cicd.yaml
+++ b/.github/workflows/terraform-cicd.yaml
@@ -35,3 +35,7 @@ jobs:
         uses: hashicorp/setup-terraform@v2
         with:
           cli_config_credentials_token: ${{ secrets.TERROFORM_TOKEN }}
+
+      # Checks that all Terraform configuration files adhere to a canonical format
+      - name: Terraform Format
+        run: terraform fmt -check
