--- a/.github/workflows/terraform-lint.yaml
+++ b/.github/workflows/terraform-lint.yaml
@@ -29,6 +29,6 @@ jobs:
         env:
           # https://github.com/terraform-linters/tflint/blob/master/docs/user-guide/plugins.md#avoiding-rate-limiting
           GITHUB_TOKEN: ${{ github.token }}
-#
-#      - name: Run TFLint
-#        run: tflint -f compact
+
+      - name: Run TFLint
+        run: tflint -f compact
