--- a/.github/workflows/tflint.yaml
+++ b/.github/workflows/tflint.yaml
@@ -1,11 +1,11 @@
-name: Lint
+name: tflint
 on:
   push:
 
 jobs:
   tflint:
     runs-on: ubuntu-latest
-
+    name: 'tflint-checks'
     steps:
       - uses: actions/checkout@v3
         name: Checkout source code
